--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,1 +1,45 @@
-/* styles */
+/*Bootstrap icon*/
+
+/* app */
+#app {
+    font-family: Outfit;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+  background-color: #f8f8f8;
+  
+}
+  
+  nav {
+    padding: 30px;
+    background-color: #f8f8f8;
+  }
+  
+  nav a {
+    font-weight: bold;
+    color: #2c3e50;
+  }
+  
+  nav a.router-link-exact-active {
+    color: #42b983;
+  }
+
+/*Universal selector*/
+
+/*Custom variables*/
+
+::-webkit-scrollbar{
+  display: none;
+}
+
+
+
+/*Logo*/
+img[alt='logo']{
+  width: 5rem;
+}
+/* wrapper */
+:is(.wrapper){
+  display:grid;
+  grid-template-rows: auto minmax(100dvh, 100%) auto;
+}
