--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6,13 +6,13 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-background-color: rgb(167, 216, 221);
+  background-color: #F2FBD5;
 
 }
 
 nav {
   padding: 30px;
-  background-color: #f8f8f8;
+  background-color: #00A9FF;
 }
 
 nav a {
@@ -39,13 +39,13 @@ img[alt='logo']{
 width: 5rem;
 }
 /* wrapper */
-:is(.wrapper){
+/* :is(.wrapper){
 display:grid;
-grid-template-rows: auto minmax(100dvh, 100%) auto;
-}
+grid-template-rows: auto minmax( 100%) auto;
+} */
 
 .headmain{
-  color: blue;
+  color: rgb(26, 26, 195);
   font: bold;
   font-size: 50px;
 
